add StartedConversationEvent